<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="cancelClicked"
    android:orientation="vertical"
    android:padding="16dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/abs__ab_transparent_dark_holo"
            android:paddingLeft="8dp"
            android:text="@string/hora_puesto"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hora"
            android:inputType="none|datetime" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editTextLetra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/letra"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textCapCharacters"
                android:maxLength="2" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editTextNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/numero"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:maxLength="2" />

        </LinearLayout>
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/abs__ab_transparent_dark_holo"
            android:paddingLeft="8dp"
            android:text="@string/datos_denuncia"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />
        
        <Spinner
            android:id="@+id/spinnerMotivo"
            style="@style/Widget.Sherlock.Light.Spinner.DropDown.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descripcion_denuncia"
            android:inputType="textMultiLine" >

        </EditText>

        <LinearLayout
            android:id="@+id/layoutAttachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/fondo_attachment"
            android:orientation="vertical"
            android:padding="1dp"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:background="@color/color_fondo_attachment2"
                    android:padding="4dp"
                    android:src="@drawable/attachment" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textAttach1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textAttach2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton1"
                    style="@style/ButtonHoloLightAttachment"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:onClick="removeAttachment"
                    android:src="@drawable/remove" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSeparadorAttachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_fondo_attachment2"
                android:orientation="vertical"
                android:paddingBottom="1dp"
                android:visibility="gone" >

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewDenuncia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="cancelClicked"
            android:text="@string/cancel"
            android:visibility="gone" />
        
    </LinearLayout>
</ScrollView>